trunk/Archive2/2c/1bbe66c171de7b/output
main.cpp: In function 'main':
main.cpp:5:24: error: 'kl' undeclared (first use in this function)
      printf("%s\n",foo(k,l));
                        ^
main.cpp:2:25: note: in definition of macro 'foo'
 #define     foo(m,n)    m##n
                         ^
main.cpp:5:24: note: each undeclared identifier is reported only once for each function it appears in
      printf("%s\n",foo(k,l));
                        ^
main.cpp:2:25: note: in definition of macro 'foo'
 #define     foo(m,n)    m##n
                         ^
